--- a/software/nbia-services-commons/build.xml
+++ b/software/nbia-services-commons/build.xml
@@ -113,7 +113,7 @@
   </target>
 
 
-  <target name="run" depends="build-commons, test, inspect, -post-clean" description="Default project target" />
+  <target name="run" depends="build-commons, -post-clean" description="Default project target" />
 
   <target name="-post-clean" depends="post-clean-test" description="Performs necessary clean-up after a build">
     <delete dir="${assembly.dir}" quiet="false" />
