--- a/software/image-zipping-mdb/ivy.xml
+++ b/software/image-zipping-mdb/ivy.xml
@@ -63,7 +63,13 @@
     <dependency org="dcm4che"
                 name="dcm4che"
                 rev="1.4.20"
-                conf="runtime->default"/>
+                conf="runtime->master"/>
+
+    <dependency org="javax.mail"
+		name="mail"
+		rev="1.4"
+		conf="compile->master;runtime->master"/>
+
   </dependencies>
 
 </ivy-module>
