--- a/software/nbia-ctp/ivy.xml
+++ b/software/nbia-ctp/ivy.xml
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency org="junit" name="junit" rev="4.4" conf="test->master"/>
-    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->default"/>
+    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->master"/>
     <dependency org="javancss" name="javancss" rev="29.50" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="4.4" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle-optional" rev="4.4" conf="test->default"/>
@@ -100,7 +100,7 @@
     <dependency org="rsna"
                 name="ctp"
                 rev="X42"
-                conf="compile,test->master;"/>
+                conf="compile,test->master"/>
 
     <dependency org="rsna"
                 name="ctp-installer"
