--- a/software/nbia-dao/ivy.xml
+++ b/software/nbia-dao/ivy.xml
@@ -19,7 +19,7 @@
 
   <dependencies>
     <dependency org="junit" name="junit" rev="4.4" conf="test->default"/>
-    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->default"/>
+    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->master"/>
     <dependency org="javancss" name="javancss" rev="29.50" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="4.4" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle-optional" rev="4.4" conf="test->default"/>
@@ -66,7 +66,7 @@
     <dependency org="gov.nih.nci.security"
                 name="csm"
                 rev="4.0"
-                conf="compile->master;runtime->default">
+                conf="compile->master;runtime->master">
       <exclude module="jdom"/>
     </dependency>
 
