--- a/software/nbia-download-manager/ivy.xml
+++ b/software/nbia-download-manager/ivy.xml
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency org="junit" name="junit" rev="4.3.1" conf="test->master"/>
-    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->default"/>
+    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->master"/>
     <dependency org="javancss" name="javancss" rev="29.50" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="4.4" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle-optional" rev="4.4" conf="test->default"/>
