--- a/software/nbia-services-commons/ivy.xml
+++ b/software/nbia-services-commons/ivy.xml
@@ -19,7 +19,7 @@
 
   <dependencies>
     <dependency org="junit" name="junit" rev="4.4" conf="test->default"/>
-    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->default"/>
+    <dependency org="cobertura" name="cobertura" rev="1.9.3-asmhack" conf="test->master"/>
     <dependency org="javancss" name="javancss" rev="29.50" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="4.4" conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle-optional" rev="4.4" conf="test->default"/>
@@ -35,11 +35,12 @@
     <dependency org="powermock"
                 name="powermock-easymock"
                 rev="1.3.5"
-                conf="test->default"/>
+                conf="test->runtime"/>
     <dependency org="cglib"
                 name="cglib"
                 rev="2.1_3"
-                conf="test->master,runtime"/>
+                conf="test->master">
+    </dependency>
     <!-- hmmmm easymock-classextensions not picking this up from how powermock dep is defined i guess?  fix when we have access -->
     <dependency org="org.objenesis"
                 name="objenesis"
@@ -97,7 +98,7 @@
     <dependency org="dcm4che"
                 name="dcm4che"
                 rev="1.4.20"
-                conf="compile->master;runtime->default"/>
+                conf="compile->master;runtime->master"/>
     <dependency org="log4j"
                 name="log4j"
                 rev="1.2.15"
@@ -114,10 +115,10 @@
                 name="jai_imageio"
                 rev="1.2_pre-dr-b04"
                 conf="runtime->master"/>
-    <dependency org="java.net"
+<!--    <dependency org="java.net"
                 name="clibwrapper_jiio"
                 rev="1.2_pre-dr-b04"
-                conf="runtime->master"/>
+                conf="runtime->master;test->master"/>-->
 
     <dependency org="dcm4che"
                 name="dcm4che-imageio-rle"
@@ -130,7 +131,7 @@
     <dependency org="gov.nih.nci.security"
                 name="csm"
                 rev="4.0"
-                conf="compile->master;runtime->default">
+                conf="compile->master;runtime->master">
       <exclude module="jdom"/>
     </dependency>
     <!-- csm ivy will hit blank conf in maven repo, while is compile, which apparentl pulls source -->
